--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         ></a>
       </div>
       <p>
-        Feita com <ion-icon name="heart"></ion-icon> e ajuda da
+        Feita com <ion-icon name="heart"></ion-icon> pela
         <a href="https://Rocketseat.com.br" target="_blank">Rocketseat</a>
       </p>
     </div>
